[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.116"
wasm-bindgen = "0.2"
reqwest = { version = "0.12.4", features = ["blocking"] }

[profile.release]
lto = true
opt-level = 's'
